# libdecsync-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  decsync_test.cpp  guard.sh  sync_type.hpp  timestamp.hpp
src/: CMakeLists.txt  app.hpp  collection.hpp  database.hpp  decsync.cpp  decsync.hpp  entry.hpp  path.cpp  path.hpp  sequence.hpp  sync_type.hpp  timestamp.cpp  timestamp.hpp
test/: CMakeLists.txt  get_sync_types.cpp  main.cpp  timestamp.cpp
